--- a/_config.yml
+++ b/_config.yml
@@ -11,7 +11,7 @@ relative_permalinks: true
 title:               Jekyll Example
 tagline:             Basic example of a Jekyll site with Sass enabled.
 url:                 ""
-baseurl:             ""
+baseurl:             /MMJ-github-pages/
 
 # Assets
 #
