--- a/_config.yml
+++ b/_config.yml
@@ -8,9 +8,9 @@ permalink:           pretty
 relative_permalinks: true
 
 # Setup
-title:               Jekyll Example
-tagline:             Basic example of a Jekyll site with Sass enabled.
-url:                 ""
+#title:               Jekyll Example
+#tagline:             Basic example of a Jekyll site with Sass enabled.
+#url:                 ""
 baseurl:             /MMJ-github-pages/
 
 # Assets
